# code-to-skill

./: .gitignore  CONTRIBUTING.md  README.md  config.template.yaml  config.test.yaml  config.yaml  initial_skill.md  project.yaml  pyproject.toml  requirements.txt  run_tests.sh
.codegraph/: daemon.pid
.deepseek/context/: 2026-06-04-summary.md
.github/workflows/: test.yml
demo-project/: README.md  fetch-sources.sh  fetch_sources.py  initial_skill.md
demo-project/benchmarks/: README.md  build_fast_subset.py  normalize_context_refs.py  score_expected_checks.py
demo-project/rule_bank/: rules.jsonl
demo-project/sources/: repos.manifest.yaml
docs/: api-reference.md  implementation-plan.md  preparation-guide.md  skillopt_local_deployment_plan.md
docs/analysis/: fineract-accounting-journal-entry.md
docs/design/: 00-overall-design.md  03-skillatom-extraction.md  (+14 more)
src/: __init__.py
tests/: test_accounting_linker.py  test_atom_keywords.py  test_backend_separation.py  test_benchmark_bootstrap.py  test_benchmark_reflect.py  test_cli_help.py  test_code_diagnosis.py  test_code_evidence.py  test_code_evidence_metrics.py  test_code_fact_gate.py  test_code_retrieval.py  test_code_retrieval_rerank.py  test_code_tools.py  test_code_tools_factory.py  test_codegraph_cli.py  test_codegraph_mcp.py  test_context_mode.py  test_diagnosis_rules.py  test_eval_hygiene.py  test_framework_custom.py  test_full_simulate.py  test_gate.py  test_graph_queries.py  test_graph_sidecars.py  test_inspect_run.py  test_m1_code_graph.py  test_m2_documents.py  test_m3_m4.py  test_m3_role_filter.py  test_m5_types.py  test_output_hygiene.py  test_phase12.py  test_phase3_config.py  test_phase4_framework.py  test_phase5.py  test_phase6.py  test_pipeline_config.py  test_reflect_buffer.py  test_reflect_helpers.py  test_replay_gate.py  (+21 more)
(+163 files in other folders)
