[project]
name = "code-to-skill"
version = "0.1.0"
description = "从知识库和代码提取并优化 Agent Skill"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "tiktoken>=0.5",
    "tree-sitter>=0.21",
    "pdfplumber>=0.10",
    "python-docx>=1.0",
    "beautifulsoup4>=4.12",
    "markdown-it-py>=3.0",
    "openai>=1.0",
    "httpx>=0.27",
    "tenacity>=8.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3", "pillow>=10.0"]
lxml = ["lxml>=5.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
